--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       padding:40px;
       font-size:12px;
     ">
-      <a href="https://www.baidu.com">百度网址</a>
+      <a href="https://panyiqi.github.io/mycode/new.html">a new site</a>
     </div>
     </a>
   </body>
