--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       text-align: center;
       padding:40px;
     ">
-      <img src="https://kangwenchang.com/logo.png" alt="logo" width=160px height="160px">
+      <img src="https://panyiqi.github.io/mycode/挂盒.jpg" alt="logo" width=160px height="160px">
     </div>
     <div style="
       max-width:700px;
